[package]
name = "scylla_operations"
version = "0.1.26"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
serde_json = "1.0"
tokio = { version = "1.20", features = ["macros", "rt"] }
chrono = { version = "0.4.19", features = ["serde"] }
# Logging
log = { version = "0.4", features = ["kv_unstable", "std", "kv_unstable_serde"] }
env_logger = "0.11.2"
# crate depencies
scylla_models = { path = "../scylla_models" }

[dev-dependencies]
tokio-test = "0.4"



