[package]
name = "scylla_pg_core"
version = "0.1.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

tokio="1.20"
chrono = "0.4"
dotenv = "0.15"
config = "0.13"
serde = "1.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }

# db migrations
refinery = {version="0.8", features=["tokio-postgres"]}
