[package]
name = "scylla_pg_core"
version = "0.1.23"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

chrono = "0.4"
dotenv = "0.15"
config = "0.13"
serde = "1.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }

# db migrations
refinery = {version="0.8", features=["tokio-postgres"]}

# Logging
log = "0.4"
env_logger = "0.11.2"

# tokio and async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
