[package]
name = "scylla_pg_js"
version = "0.1.1"
edition = "2021"


[lib]
crate-type = ["cdylib"]
[dependencies]
# lib for napi bindings
napi = { version = "2.10.3", features = [
    "async",
    "tokio_rt",
    "napi8",
    "chrono_date",
    "serde-json",
] }
napi-derive = "2.9.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
# Logging
log = { version = "0.4", features = [
    "kv_unstable",
    "std",
    "kv_unstable_serde",
] }
env_logger = "0.9"
# db migrations
#refinery = {version="0.8", features=["tokio-postgres"]}
# crate depencies
scylla_models = { path = "../scylla_models" }
scylla_pg_lib = { path = "../scylla_pg_lib" }
scylla_pg_core = { path = "../scylla_pg_core" }

[build-dependencies]
napi-build = "2.0.1"

#[dev-dependencies.cargo-husky]
#version = "1"
#default-features = false # Disable features which are enabled by default
#features = ["user-hooks"]
