[package]
name = "scylla_pg_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.3"
once_cell = "1.12.0"
tokio = { version = "1.19.2", features = ["full"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
mockall = "0.11.3"
async-trait = "0.1"
# Logging
log = { version = "0.4", features = ["kv_unstable", "std", "kv_unstable_serde"] }
env_logger = "0.9"
# db migrations
refinery = {version="0.8", features=["tokio-postgres"]}
# crate depencies
scylla_models = { path = "../scylla_models" }
scylla_operations = { path = "../scylla_operations" }
