[package]
name = "scylla_pg_monitor"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

tokio="1.20"
chrono = "0.4"
dotenv = "0.15"
config = "0.13"
serde = "1.0"


# db
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }


# crate dependencies
scylla_models = { path = "../scylla_models" }
scylla_pg_lib = { path = "../scylla_pg_lib" }
scylla_pg_core = { path = "../scylla_pg_core" }

[dev-dependencies]
scylla_operations = {path = "../scylla_operations"}
async-trait = "0.1"
